--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 <body>
     <h2>Click to download the mods</h2>
-    <a id="downloadBtn" class="download-button" href="
-	mods.zip" download>Download</a>
+    <a id="downloadBtn" class="download-button" href="mods.zip" download>Download</a>
 
     <p><strong>What you need to have:</strong></p>
     <ul>
