--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li>Laptop or PC</li>
         <li>Launcher for Minecraft</li>
 	<li>mods in the mods folder in the 1.19 version folder</li>
+	<li>ip:MCSMP101.aternos.me:49583 </li>
+	<li>have fun!</li>
     </ul>
 
     <script>
