--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	<li>mods in the mods folder in the 1.19 version folder</li>
 	<li>ip:MCSMP101.aternos.me:49583 </li>
 	<li>have fun!</li>
+	<li>if don't have the mods you can't join the server</li>
+	<li>need to accept the resource pack</li>
     </ul>
 
     <script>
