--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<li>ip:MCSMP101.aternos.me:49583 </li>
 	<li>if don't have the mods you can't join the server</li>
 	<li>need to accept the resource pack</li>
+	<li>Have fun!</li>
     </ul>
 
     <script>
