--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <li>Laptop or PC</li>
         <li>Launcher for Minecraft</li>
 	<li>mods in the mods folder in the 1.19 version folder</li>
-	<li>ip:MCSMP101.aternos.me:49583 </li>
+	<li>ip:MCSMP101.aternos.me </li>
 	<li>if don't have the mods you can't join the server</li>
-	<li>need to accept the resource pack</li>
 	<li>Have fun!</li>
     </ul>
 
