--- a/index.html
+++ b/index.html
@@ -31,17 +31,6 @@
 <body>
 
 
-<ul class="info-list">
-  <li class="info-list-item">Version 1.20.1</li>
-  <li class="info-list-item">Mic</li>
-  <li class="info-list-item">Laptop or PC</li>
-  <li class="info-list-item">Launcher for Minecraft</li>
-  <li class="info-list-item">IP: MCSMP101.aternos.me</li>
-  <li class="info-list-item">If you don't have the mods, you can't join the server</li>
-  <li class="info-list-item">Have fun!</li>
-</ul>
-
-
 <a id="download-link" href="mods.zip" download>
   <button id="download-button" class="download-button">Download File</button>
 </a>
@@ -58,6 +47,21 @@ downloadButton.addEventListener('transitionend', function(event) {
     downloadButton.classList.remove('clicked');
   }
 });
+
+
+  <ul>
+  <li>What you need:</li>
+  <li> </li>
+  <li></li>Version 1.20.1</li>
+  <li> </li>Mic</li>
+  <li>Laptop or PC</li>
+  <li>Launcher for Minecraft</li>
+  <li>IP: MCSMP101.aternos.me</li>
+  <li>If you don't have the mods, you can't join the server</li>
+  <li>Have fun!</li>
+</ul>
+
+  
 </script>
 
 </body>
