--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 <body>
 
 
-  <ul>
+<ul>
   <li>What you need:</li>
-  <li> </li>
-  <li></li>Version 1.20.1</li>
-  <li> </li>Mic</li>
+  <li>Version 1.20.1</li>
+  <li>Mic</li>
   <li>Laptop or PC</li>
   <li>Launcher for Minecraft</li>
   <li>IP: MCSMP101.aternos.me</li>
